Updated language colors

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -318,16 +318,16 @@ footer {
   color: #F1E05A;
 }
 
+.C-Sharp {
+  color: #178600;
+}
+
 .Python {
   color: #3572A5;
 }
 
 .PHP {
   color: #4F5D95;
-}
-
-.Python {
-  color: #3572A5;
 }
 
 .Ruby {
@@ -348,4 +348,8 @@ footer {
 
 .Shell {
   color: #89E051;
+}
+
+.API {
+  color: #00D4AB;
 }
