publish: Updated language colors
generated from commit 3086a791099b539985571f95bcb693790712738d

--- a/css/app.css
+++ b/css/app.css
@@ -6010,14 +6010,14 @@ footer {
 .JavaScript {
   color: #F1E05A; }
 
+.C-Sharp {
+  color: #178600; }
+
 .Python {
   color: #3572A5; }
 
 .PHP {
   color: #4F5D95; }
-
-.Python {
-  color: #3572A5; }
 
 .Ruby {
   color: #701516; }
@@ -6033,4 +6033,8 @@ footer {
 
 .Shell {
   color: #89E051; }
+
+.API {
+  color: #00D4AB; }
+
 /*# sourceMappingURL=app.css.map */
